src/objects/ap_pdb_trip_htl__x.object
<CustomObject>
    <description>caesars$ap_pdb_trip_htl</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$ap_pdb_trip_htl</externalName>
    <fields>
        <fullName>ap_pdb_trip_hdr_fk__c</fullName>
        <description>ap_pdb_trip_hdr_fk</description>
        <externalDeveloperName>ap_pdb_trip_hdr_fk</externalDeveloperName>
        <label>ap_pdb_trip_hdr_fk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c_prop_market_cd__c</fullName>
        <description>c_prop_market_cd</description>
        <externalDeveloperName>c_prop_market_cd</externalDeveloperName>
        <label>c_prop_market_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_fk__c</fullName>
        <description>contact_fk</description>
        <externalDeveloperName>contact_fk</externalDeveloperName>
        <label>contact_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_end_dt__c</fullName>
        <description>d_end_dt</description>
        <externalDeveloperName>d_end_dt</externalDeveloperName>
        <label>d_end_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_start_dt__c</fullName>
        <description>d_start_dt</description>
        <externalDeveloperName>d_start_dt</externalDeveloperName>
        <label>d_start_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_comp_rev__c</fullName>
        <description>f_comp_rev</description>
        <externalDeveloperName>f_comp_rev</externalDeveloperName>
        <label>f_comp_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_fb_rev__c</fullName>
        <description>f_fb_rev</description>
        <externalDeveloperName>f_fb_rev</externalDeveloperName>
        <label>f_fb_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_rev__c</fullName>
        <description>f_other_rev</description>
        <externalDeveloperName>f_other_rev</externalDeveloperName>
        <label>f_other_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_room_rev__c</fullName>
        <description>f_room_rev</description>
        <externalDeveloperName>f_room_rev</externalDeveloperName>
        <label>f_room_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ap_pdb_trip_id__c</fullName>
        <description>i_ap_pdb_trip_id</description>
        <externalDeveloperName>i_ap_pdb_trip_id</externalDeveloperName>
        <label>i_ap_pdb_trip_id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <description>i_dmid</description>
        <externalDeveloperName>i_dmid</externalDeveloperName>
        <label>i_dmid</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_nbr_occupants__c</fullName>
        <description>i_nbr_occupants</description>
        <externalDeveloperName>i_nbr_occupants</externalDeveloperName>
        <label>i_nbr_occupants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_rooms__c</fullName>
        <description>i_nbr_rooms</description>
        <externalDeveloperName>i_nbr_rooms</externalDeveloperName>
        <label>i_nbr_rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_prop_market_type_id__c</fullName>
        <description>i_prop_market_type_id</description>
        <externalDeveloperName>i_prop_market_type_id</externalDeveloperName>
        <label>i_prop_market_type_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rm_night__c</fullName>
        <description>i_rm_night</description>
        <externalDeveloperName>i_rm_night</externalDeveloperName>
        <label>i_rm_night</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_stay__c</fullName>
        <description>i_stay</description>
        <externalDeveloperName>i_stay</externalDeveloperName>
        <label>i_stay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>market_fk__c</fullName>
        <description>market_fk</description>
        <externalDeveloperName>market_fk</externalDeveloperName>
        <label>market_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>caesars$ap_pdb_trip_htl</label>
    <pluralLabel>caesars$ap_pdb_trip_htl</pluralLabel>
</CustomObject>